--- a/index.html
+++ b/index.html
@@ -17,17 +17,15 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am an engineer</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I am from milford michigan </p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>managing my property</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
-      <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I enjoy software engineering</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p><Money class="jpg"></Money></p>
     </section>
 
     <footer id="footer">
