--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <h1>What's your dream job?</h1>
       <p>I enjoy software engineering</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>C:\Users\codip\prework-about-me\img\<Money class="jpg"></Money>
+      <p><Money class="jpg"></Money>
       </p>
     </section>
 
